--- a/.github/workflows/infra-deploy.yaml
+++ b/.github/workflows/infra-deploy.yaml
@@ -4,7 +4,7 @@ on:
 
 env:
   REGION_DEFAULT: "us-east-1"
-  CLUSTER_NAME: "cluster-fastfood"
+  CLUSTER_NAME: "tech-challenge"
 jobs:
   deploy:
     name: Deploy AWS Academy
@@ -23,15 +23,18 @@ jobs:
       - name: Update Kube Config
         run: aws eks update-kubeconfig --name ${{ env.CLUSTER_NAME }} --region ${{ env.REGION_DEFAULT }}
 
-      - name: Kube Apply ConfigMap
-        run: kubectl apply -f k8s/configmap.yaml
-      - name: Kube Apply Secrets
-        run: kubectl apply  k8s/secrets.yaml
-      - name: Kube Apply Mysql Configmap
-        run: kubectl apply  k8s/mysql-configmap.yaml
-      - name: Kube Apply App
-        run: kubectl apply  k8s/deployment.yaml
-      - name: Kube Apply LoadBalancer
-        run: kubectl apply  k8s/load-balancer.yaml
+      - name: Kube Apply ConfigMap in-out
+        run: kubectl apply -f k8s/configmap-in-out.yaml
+      - name: Kube Apply ConfigMap process video
+        run: kubectl apply -f k8s/configmap-process-video.yaml
+      - name: Kube Apply Service in-out
+        run: kubectl apply -f k8s/service-in-out.yaml
+      - name: Kube Apply Service Process Video
+        run: kubectl apply -f k8s/service-process-video.yaml 
+      - name: Kube Apply HPA in-out
+        run: kubectl apply -f k8s/hpa-in-out.yaml
+      - name: Kube Apply HPA process-video
+        run: kubectl apply -f k8s/hpa-process-video.yaml
+
   
       
