--- a/k8s/service-process-video.yaml
+++ b/k8s/service-process-video.yaml
@@ -1,13 +1,13 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: lb-in-out
+  name: sv-process-video
   namespace: techChallenge
 spec: 
   selector:
-    app: in-out
+    app: process-video
   ports:
     - protocol: TCP
       port: 80
       targetPort: 8080
-  type: LoadBalancer
+  type: ClusterIP
